Fix button widths, lessen input field padding, align back button

--- a/src/components/AddNewWarehouse/AddNewWarehouse.scss
+++ b/src/components/AddNewWarehouse/AddNewWarehouse.scss
@@ -11,7 +11,7 @@
     &__header {
         display: flex;
         justify-content: left;
-        align-items: center;
+        align-items: baseline;
         background-color: #ffffff;
         width: 100%;
         height: 9.7rem;
@@ -83,7 +83,7 @@
         &-input {
             border-radius: 2rem;
             height: 3.6rem;
-            padding-left: 2rem;
+            padding: 0 1.5rem;
             font-size: 1.3rem;
             border: 1px solid $color-cloud;
             border-width: 0.1rem;
@@ -123,7 +123,8 @@
             color: $color-slate;
 
             @include tablet {
-                width: 8rem;
+                padding: 0 1.75rem;
+                width: auto;
             }
 
             &:hover {
@@ -138,7 +139,8 @@
             color: #ffffff;
             
             @include tablet {
-                width: 15rem;
+                padding: 0 1.75rem;
+                width: auto;
             }
 
             &:hover {
